Fri Aug 28 14:20:58 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

  * roma-put.rb: smap -> smap2 修正漏れ

Thu Aug 27 19:37:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-cat.rb: [SR#102] cat対応

Thu Aug 20 14:44:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bhere.rb: [BUG#135]対応. 巨大ファイルをfairy cat出来ない
	* roma-put.rb: includeファイル間違い

Tue Aug 18 16:05:13 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: RomaPutを分離
	* roma-put.rb: RomaPut新設, 仮対応

Sat Aug  8 01:15:12 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-find.rb, controller.rb, n-find.rb: [SR#102] find対応

Fri Aug  7 23:58:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb: [SR#102] mgroup_by対応

Fri Aug  7 22:50:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: [SR#126] mapfで配列に展開しない.

Fri Aug  7 21:37:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-inject.rb, n-inject.rb, controller.rb: [SR#102] inject対応
	* bjob.rb: Bjob#create_nodes: ブロックがnjobを返すようにした

Wed Aug  5 22:38:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* varray.rb: [BUG#131] VArray#index_on_arrayを直した.

Wed Aug  5 22:17:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-there.rb, controller.rb, n-there.rb, file-place.rb: [SR#102]
	  there対応

Wed Aug  5 20:32:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb, controller.rb, n-input-iota.rb, file-place.rb:
	  [SR#102] iota対応

Wed Aug  5 18:44:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-barrier.rb, n-barrier.rb, n-filter.rb: [SR#102] barrier対応

Fri Jul 31 22:23:41 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-zipper.rb, controller.rb, zipper.rb, n-zipper.rb: [SR#102] zip対応

Wed Jul 22 21:45:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bjob.rb: Bjob#each_node がデッドロックしないようにした.

Wed Jul 22 17:59:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort19.rb: [SR#102] sort_by対応